--- a/chrome extension/popup.html
+++ b/chrome extension/popup.html
@@ -20,5 +20,11 @@
       </form>
       <br />
       <p id="loginfail"></p>
+      <p id="signup_msg">
+         New to Clockman?
+         <a href="https://cryptic-stream-13108.herokuapp.com/" target="_blank"
+            >Sign Up.</a
+         >
+      </p>
    </body>
 </html>
