--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,14 +6,14 @@
          rel="stylesheet"
       />
       <meta charset="utf-8" />
-      <link rel="icon" href="%PUBLIC_URL%/c log.png" />
+      <link rel="icon" href="%PUBLIC_URL%/c logo.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
       <meta
          name="description"
          content="Web site created using create-react-app"
       />
-      <link rel="apple-touch-icon" href="clogo.png" />
+      <link rel="apple-touch-icon" href="c logo.png" />
       <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
